// This is your Prisma schema file

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model User {
  id           String              @id @default(cuid())
  email        String              @unique
  name         String?             // Nom d'affichage optionnel
  passwordHash String
  createdAt    DateTime            @default(now())
  updatedAt    DateTime            @updatedAt
  deletedAt    DateTime?           // Soft delete RGPD
  documents    Document[]
  books        Book[]
  conversations ChatConversation[]
  tags         Tag[]
  templates    DocumentTemplate[]

  @@index([email])
  @@map("users")
}

model Book {
  id          String     @id @default(cuid())
  userId      String
  user        User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  title       String
  description String?
  sortOrder   BigInt     @default(0)
  createdAt   DateTime   @default(now())
  updatedAt   DateTime   @updatedAt
  documents   Document[]

  @@index([userId])
  @@index([userId, sortOrder])
  @@map("books")
}

model WritingStyle {
  id          String              @id @default(cuid())
  name        String              @unique
  description String
  createdAt   DateTime            @default(now())
  documents   Document[]
  templates   DocumentTemplate[]

  @@map("writing_styles")
}

model Document {
  id           String             @id @default(cuid())
  userId       String
  user         User               @relation(fields: [userId], references: [id], onDelete: Cascade)
  title        String
  content      String
  wordCount    Int                @default(0)
  styleId      String
  style        WritingStyle       @relation(fields: [styleId], references: [id])
  version      Int                @default(1)
  sortOrder    BigInt             @default(0)
  bookId       String?
  book         Book?              @relation(fields: [bookId], references: [id], onDelete: SetNull)
  chapterOrder Int?
  deletedAt    DateTime?          // Soft delete (§5.5.3 du cahier des charges)
  createdAt    DateTime           @default(now())
  updatedAt    DateTime           @updatedAt
  analyses     AIAnalysis[]
  versions     DocumentVersion[]
  conversations ChatConversation[]
  tags         DocumentTag[]

  @@index([userId])
  @@index([styleId])
  @@index([userId, sortOrder])
  @@index([bookId])
  @@index([bookId, chapterOrder])
  @@index([deletedAt])
  @@index([userId, deletedAt])
  @@map("documents")
}

model AIAnalysis {
  id         String   @id @default(cuid())
  documentId String
  document   Document @relation(fields: [documentId], references: [id], onDelete: Cascade)
  type       String // 'syntax' | 'style' | 'progression'
  suggestions String // JSON array
  confidence Float
  metadata   String? // JSON object
  createdAt  DateTime @default(now())

  @@index([documentId])
  @@map("ai_analyses")
}

// ============================================
// PHASE 1: Chat IA et Versioning
// ============================================

model ChatConversation {
  id         String        @id @default(cuid())
  documentId String
  userId     String
  createdAt  DateTime      @default(now())
  updatedAt  DateTime      @updatedAt
  
  document   Document      @relation(fields: [documentId], references: [id], onDelete: Cascade)
  user       User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  messages   ChatMessage[]

  @@index([documentId])
  @@index([userId])
  @@map("chat_conversations")
}

model ChatMessage {
  id             String           @id @default(cuid())
  conversationId String
  role           String           // "user" | "assistant"
  content        String
  createdAt      DateTime         @default(now())
  
  conversation   ChatConversation @relation(fields: [conversationId], references: [id], onDelete: Cascade)
  @@index([conversationId])
  @@index([conversationId, createdAt])
  @@map("chat_messages")
}

model DocumentVersion {
  id         String   @id @default(cuid())
  documentId String
  version    Int      // Numéro de version
  title      String   // Snapshot du titre
  content    String   // Snapshot du contenu
  wordCount  Int
  createdAt  DateTime @default(now())
  
  document   Document @relation(fields: [documentId], references: [id], onDelete: Cascade)

  @@unique([documentId, version])
  @@index([documentId])
  @@index([documentId, version])
  @@map("document_versions")
}

// ============================================
// PHASE 2: Tags et Templates
// ============================================

model Tag {
  id        String        @id @default(cuid())
  name      String
  color     String?       // Couleur hex pour l'UI (ex: "#3B82F6")
  userId    String?       // null = tag global/système
  createdAt DateTime      @default(now())
  
  user      User?         @relation(fields: [userId], references: [id], onDelete: Cascade)
  documents DocumentTag[]

  @@unique([userId, name]) // Un utilisateur ne peut pas avoir 2 tags avec le même nom
  @@index([userId])
  @@map("tags")
}

model DocumentTag {
  id         String   @id @default(cuid())
  documentId String
  tagId      String
  
  document   Document @relation(fields: [documentId], references: [id], onDelete: Cascade)
  tag        Tag      @relation(fields: [tagId], references: [id], onDelete: Cascade)
  
  @@unique([documentId, tagId])
  @@index([documentId])
  @@index([tagId])
  @@map("document_tags")
}

model DocumentTemplate {
  id          String        @id @default(cuid())
  name        String
  description String?
  content     String        // Contenu du template
  styleId     String
  isPublic    Boolean       @default(false) // true = template système, false = template utilisateur
  userId      String?       // null = template système/public
  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt
  
  style       WritingStyle  @relation(fields: [styleId], references: [id])
  user        User?         @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([styleId])
  @@index([userId])
  @@index([isPublic])
  @@map("document_templates")
}